--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="controls">
             <button id="startBtn" onclick="start()">Start</button>
-            <button id="stopBtn" onclick="stop()">stop</button>
+            <button id="stopBtn" onclick="stop()">Stop</button>
             <button id="resetBtn" onclick="reset()">Reset</button>
         </div>
     </div>
